--- a/src/style/components/_app.scss
+++ b/src/style/components/_app.scss
@@ -1,3 +1,8 @@
 .app {
-    
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-25%, -25%);
+    font-size: 3em;
 }
