--- a/src/style/settings/_colors.scss
+++ b/src/style/settings/_colors.scss
@@ -4,3 +4,9 @@
 $black:     #000000;
 $mineshaft: #333333;
 $white:     #ffffff;
+
+$aquamarine: #74febc;
+$malibu: #74b6fe;
+$salmon: #fe8674;
+$purple: #8200c9;
+$your-pink: #ffbbbb;
